// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> does not render profile image or dropdown if unauthenticated 1`] = `
<header
  className="container-fluid border-bottom"
>
  <nav
    aria-label="header"
    className="navbar px-0 py-1 justify-content-between"
  >
    <div>
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="edX logo"
          onError={[Function]}
          src="https://edx-cdn.org/v3/prod/logo.svg"
        />
      </a>
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders default profile image correctly 1`] = `
<header
  className="container-fluid border-bottom"
>
  <nav
    aria-label="header"
    className="navbar px-0 py-1 justify-content-between"
  >
    <div>
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="edX logo"
          onError={[Function]}
          src="https://edx-cdn.org/v3/prod/logo.svg"
        />
      </a>
    </div>
    <div
      className="dropdown"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-outline-primary"
        id="pgn__dropdown-trigger-1"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden={true}
          className="fa fa-user mr-2"
          id="Icon1"
        />
        <span
          className="sr-only"
        >
          Profile image for staff@example.com
        </span>
        staff@example.com
      </button>
      <div
        aria-hidden={true}
        aria-labelledby="pgn__dropdown-trigger-1"
        className="dropdown-menu"
        onKeyDown={[Function]}
        role="menu"
      >
        <button
          className="dropdown-item btn btn-link"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Logout
        </button>
      </div>
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders edX logo correctly 1`] = `
<header
  className="container-fluid border-bottom"
>
  <nav
    aria-label="header"
    className="navbar px-0 py-1 justify-content-between"
  >
    <div>
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="edX logo"
          onError={[Function]}
          src="https://edx-cdn.org/v3/prod/logo.svg"
        />
      </a>
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders enterprise logo correctly 1`] = `
<header
  className="container-fluid border-bottom"
>
  <nav
    aria-label="header"
    className="navbar px-0 py-1 justify-content-between"
  >
    <div>
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Test Enterprise logo"
          onError={[Function]}
          src="https://test.url/image/1.png"
        />
      </a>
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders profile image correctly 1`] = `
<header
  className="container-fluid border-bottom"
>
  <nav
    aria-label="header"
    className="navbar px-0 py-1 justify-content-between"
  >
    <div>
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="edX logo"
          onError={[Function]}
          src="https://edx-cdn.org/v3/prod/logo.svg"
        />
      </a>
    </div>
    <div
      className="dropdown"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-outline-primary"
        id="pgn__dropdown-trigger-0"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="Profile image for staff@example.com"
          className="user-profile-img mr-2"
          src="test-file-stub"
        />
        staff@example.com
      </button>
      <div
        aria-hidden={true}
        aria-labelledby="pgn__dropdown-trigger-0"
        className="dropdown-menu"
        onKeyDown={[Function]}
        role="menu"
      >
        <button
          className="dropdown-item btn btn-link"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Logout
        </button>
      </div>
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders sidebar toggle correctly does not show toggle 1`] = `
<header
  className="container-fluid border-bottom"
>
  <nav
    aria-label="header"
    className="navbar px-0 py-1 justify-content-between"
  >
    <div>
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="edX logo"
          onError={[Function]}
          src="https://edx-cdn.org/v3/prod/logo.svg"
        />
      </a>
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders sidebar toggle correctly does show toggle 1`] = `
<header
  className="container-fluid border-bottom"
>
  <nav
    aria-label="header"
    className="navbar px-0 py-1 justify-content-between"
  >
    <div>
      <button
        aria-controls="sidebar"
        className="sidebar-toggle-btn px-1 mr-2 text-dark btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden={true}
          className="fa fa-bars"
          id="Icon2"
        />
        <span
          className="sr-only"
        >
          open menu
        </span>
      </button>
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="edX logo"
          onError={[Function]}
          src="https://edx-cdn.org/v3/prod/logo.svg"
        />
      </a>
    </div>
  </nav>
</header>
`;
